hello-k8s/httpserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      # k8s最大等待容器退出时间，默认30s
      terminationGracePeriodSeconds: 30
      containers:
        - name: httpserver
          imagePullPolicy: IfNotPresent
          image: bryancoder/httpserver:v1.0
          # 配置日志等级,只打印到控制台
          args:
            - -v=4
            - logtostderr=true
          ports:
            - containerPort: 8899
          # 从configmap中定义环境变量，拿到VERSION
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          #存活探针
          livenessProbe:
            tcpSocket:
              port: 8899
            initialDelaySeconds: 3
            periodSeconds: 3
          # 就绪探针
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8899
            #容器启动后要等待多少秒后存活和就绪探测器才被初始化，默认是 0 秒，最小值是 0。
            initialDelaySeconds: 5
            #执行探测的时间间隔（单位是秒）。默认是 10 秒。最小值是 1。
            periodSeconds: 10
            #探测的超时后等待多少秒。默认值是 1 秒。最小值是 1。
            timeoutSeconds: 2
            #被视为成功的最小连续成功数。默认值是 1
            successThreshold: 1
            #当探测失败时，Kubernetes 的重试次数。 存活探测情况下的放弃就意味着重新启动容器。 就绪探测情况下的放弃 Pod 会被打上未就绪的标签。默认值是 3。最小值是 1。
            failureThreshold: 3
          lifecycle:
            postStart:
              exec:
                command: ["date '+%Y-%m-%d %H:%M:%S postStart'"]
            # sigkill前
            preStop:
              exec:
                command: ["date '+%Y-%m-%d %H:%M:%S preStop'"]



---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-svc
spec:
  type: ClusterIP
  ports:
    # 服务端口
    - port: 8899
      # 容器端口 默认情况下，targetPort 将被设置为与 port 字段相同的值。
      targetPort: 8899
      protocol: TCP
      name: http
  selector:
    app: httpserver
